FAL-1754 add support for base64 managed files